--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="firoza2">#00BCD4</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#BCC0C1</color>
+    <color name="yellow">#FFAA00</color>
+    <color name="badami">#908E93</color>
+    <color name="nightSkyBlue">#272331</color>
 </resources>
