--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -56,7 +56,8 @@
             android:layout_below="@+id/printerIp"
 
             android:hint="@string/enter_port_number"
-            android:inputType="text" />
+            android:inputType="number"
+            android:text="@string/_9100"/>
 
         <LinearLayout
             android:id="@+id/buttonRow"
@@ -69,9 +70,10 @@
             <Button
                 android:id="@+id/conTest"
                 android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="1dp"
-                android:layout_weight="1"
+
 
                 android:background="@drawable/box_button"
 
