--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -1,97 +1,127 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:background="@color/offWhite"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_centerVertical="true"
-    android:layout_height="wrap_content" >
+    android:background="@color/offWhite"
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/container"
-        android:background="@color/white"
+    android:orientation="vertical">
+
+    <RelativeLayout
         android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        android:layout_marginTop="10dp"
-        android:layout_height="wrap_content"
-
-        card_view:elevation="14dp">
-
-        <RelativeLayout
+        <androidx.cardview.widget.CardView
+            android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/iv_image"
+            android:layout_marginTop="10dp"
+            android:background="@color/white"
+
+            card_view:elevation="14dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:layout_marginTop="17dp"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="4dp"
-                android:layout_marginLeft="10dp"
-                android:src="@drawable/left_icon">
-            </ImageView>
-        <RelativeLayout
-            android:id="@+id/main_body"
-            android:layout_toRightOf="@+id/iv_image"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="1dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/grand_total"
-                android:textSize="14dp"
-                android:textStyle="bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center" >
-            </TextView>
-            <TextView
-                android:id="@+id/first_name"
-                android:layout_below="@+id/grand_total"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center" >
-            </TextView>
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:weightSum="40">
 
-            <TextView
-                android:id="@+id/date"
-                android:layout_below="@+id/first_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-
-               >
-
-            </TextView>
-        </RelativeLayout>
-            <RelativeLayout
-                android:layout_toRightOf="@+id/main_body"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="12dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <ImageButton
-                    android:id="@+id/print"
-
-                    android:background="@drawable/print"
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    />
+                    android:layout_weight="37"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/iv_image"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+
+                        android:layout_centerVertical="true"
+
+                        ></ImageView>
+
+                    <RelativeLayout
+                        android:id="@+id/main_body"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_toRightOf="@+id/iv_image"
+                        android:padding="5dp">
+
+                        <TextView
+                            android:id="@+id/grand_total"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="uhjhjhj"
+                            android:textSize="14dp"
+                            android:textStyle="bold"></TextView>
+
+                        <TextView
+                            android:id="@+id/first_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/grand_total"
+                            android:gravity="center"
+                            android:text="njhkjhk"></TextView>
+
+                        <TextView
+                            android:id="@+id/date"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/first_name"
+                            android:gravity="center"
+
+                            >
+
+                        </TextView>
+                    </RelativeLayout>
+
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_centerVertical="true"
+
+                    android:layout_weight="2">
+
+                    <ImageButton
+                        android:id="@+id/print_button"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+
+                        android:layout_centerVertical="true"
+                        android:background="@drawable/print_icon" />
+
+                    <ImageView
+                        android:id="@+id/paymentIcon"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_centerVertical="true"
+                        android:layout_toEndOf="@+id/print_button" />
+
+
+                </RelativeLayout>
 
                 <ImageButton
-                    android:id="@+id/button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginLeft="-4dp"
-                    android:layout_toRightOf="@+id/print"
-                    android:background="@drawable/right_icon" />
-            </RelativeLayout>
+                    android:id="@+id/dotMenu"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_gravity="center|center_horizontal"
+
+                    android:layout_weight="1"
+                    android:background="@drawable/ic_baseline_more_vert_24" />
+
+            </LinearLayout>
 
 
-
-        </RelativeLayout>
-    </androidx.cardview.widget.CardView>
+        </androidx.cardview.widget.CardView>
+    </RelativeLayout>
 
 </RelativeLayout>
