--- a/app/src/main/res/layout-normal-v16/activity_order_details.xml
+++ b/app/src/main/res/layout-normal-v16/activity_order_details.xml
@@ -4,11 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/offWhite"
     tools:context=".ui.settings.SettingsFragment">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
+        android:background="#BF4646"
         tools:context=".ui.orders.OrderDetails">
 
 
@@ -16,7 +19,7 @@
             android:id="@+id/header_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/firoza"
+            android:background="@color/surma"
             android:orientation="vertical"
             android:padding="10dp">
 
@@ -83,8 +86,8 @@
             android:background="@color/offWhite"
             android:orientation="vertical"
             android:paddingLeft="10dp"
-            android:paddingRight="10dp"
             android:paddingTop="5dp"
+            android:paddingRight="10dp"
             android:paddingBottom="5dp">
 
             <LinearLayout
@@ -105,6 +108,7 @@
                     android:textColor="@color/surma"
                     android:textSize="14sp"
                     android:textStyle="bold" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -142,8 +146,8 @@
             android:background="@color/surma"
             android:orientation="vertical"
             android:paddingLeft="10dp"
-            android:paddingRight="10dp"
             android:paddingTop="5dp"
+            android:paddingRight="10dp"
             android:paddingBottom="5dp">
 
             <TextView
@@ -163,8 +167,8 @@
             android:background="@color/gray"
             android:orientation="vertical"
             android:paddingLeft="10dp"
-            android:paddingRight="10dp"
             android:paddingTop="5dp"
+            android:paddingRight="10dp"
             android:paddingBottom="5dp">
 
             <LinearLayout
@@ -178,7 +182,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
                     android:fontFamily="@font/open_sans_regular"
-                    android:text="Qty  Dish"
+                    android:text="Qty X Dish"
+                    android:textSize="12sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -187,7 +192,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="9"
                     android:fontFamily="@font/open_sans_regular"
-                    android:text="Price" />
+                    android:text="Price"
+                    android:textSize="12sp" />
 
             </LinearLayout>
         </LinearLayout>
@@ -197,29 +203,46 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
+            android:layout_above="@+id/footer"
             android:layout_below="@+id/table_header"
-
-            android:layout_marginBottom="117dp"
-            android:background="@color/white"
+            android:background="@color/offWhite"
             android:orientation="vertical">
 
 
             <ListView
                 android:id="@+id/listItem"
-                android:layout_marginBottom="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+
                 android:background="@color/offWhite" />
 
         </LinearLayout>
 
 
-
         <LinearLayout
+            android:id="@+id/footer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="2px"
+                android:background="@color/nightSkyBlue" />
+
+            <TextView
+                android:id="@+id/offerText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/offWhite"
+                android:gravity="center"
+                android:text="TextView"
+                android:textColor="@color/surma"
+                android:textSize="12sp" />
+
             <LinearLayout
                 android:id="@+id/button_section"
                 android:layout_width="match_parent"
@@ -236,32 +259,34 @@
                     android:layout_weight="2"
                     android:orientation="horizontal"
                     tools:ignore="Suspicious0dp">
+
                     <Button
                         android:id="@+id/button5"
 
 
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_marginRight="5dp"
                         android:layout_weight="1"
-                        android:background="@drawable/box_button"
                         android:text="EN ROUTE"
                         android:textSize="10sp"
                         android:textStyle="bold"
-                        app:backgroundTint="@color/yellow" />
+                        app:backgroundTint="@color/yellow"
+                        app:cornerRadius="0px" />
+
                     <Button
-                        android:id="@+id/button6"
+                        android:id="@+id/printButton"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_marginRight="5dp"
                         android:layout_weight="1"
-                        android:background="@color/surma"
                         android:drawableLeft="@drawable/print_icon"
                         android:text="PRINT ORDER"
                         android:textSize="10sp"
 
                         android:textStyle="bold"
-                        app:backgroundTint="@color/surma" />
+                        app:backgroundTint="@color/surma"
+                        app:cornerRadius="0px" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -275,28 +300,36 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/open_sans_regular"
-                        android:text="TextView" />
+                        android:text="TextView"
+                        android:textSize="10sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/discount"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/open_sans_regular"
-                        android:text="TextView" />
+                        android:text="TextView"
+                        android:textSize="10sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/serviceCh"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/open_sans_regular"
-                        android:text="TextView" />
+                        android:text="TextView"
+                        android:textSize="10sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/deliCh"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/open_sans_regular"
-                        android:text="TextView" />
+                        android:text="TextView"
+                        android:textSize="10sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
