--- a/app/src/main/res/layout-v16/activity_login.xml
+++ b/app/src/main/res/layout-v16/activity_login.xml
@@ -14,6 +14,18 @@
         tools:context=".ui.orders.OrderDetails">
 
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:foregroundGravity="clip_horizontal|center"
+            android:progressDrawable="@drawable/circular_loader"
+            tools:ignore="MissingConstraints" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -205,5 +217,4 @@
 
 
     </RelativeLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
