--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -9,22 +9,25 @@
     android:paddingBottom="50dp"
     tools:context=".ui.orders.OrdersFragment">
 
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-    android:id="@+id/swipeRefresh"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-   <androidx.recyclerview.widget.RecyclerView
-       android:id="@+id/recycleView"
+   <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+       android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
-       android:scrollbars="vertical"
-       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-       tools:ignore="MissingConstraints"
-       tools:layout_editor_absoluteX="0dp"
-       tools:layout_editor_absoluteY="0dp">
+     >
 
-   </androidx.recyclerview.widget.RecyclerView>
-</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+      <androidx.recyclerview.widget.RecyclerView
+          android:id="@+id/recycleView"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_marginBottom="0dp"
+          android:scrollbars="vertical"
+          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+          tools:ignore="MissingConstraints"
+          tools:layout_editor_absoluteX="0dp"
+          tools:layout_editor_absoluteY="0dp">
+
+      </androidx.recyclerview.widget.RecyclerView>
+   </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
    <ProgressBar
