--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -4,22 +4,25 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_centerVertical="true"
-    android:background="@color/offWhite"
+    android:layout_margin="5dp"
 
+    android:background="@color/offWhite"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginEnd="3dp"
+        android:layout_marginRight="3dp">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:layout_marginTop="10dp"
             android:background="@color/white"
 
+            card_view:cardCornerRadius="20dp"
             card_view:elevation="14dp">
 
             <LinearLayout
@@ -37,7 +40,7 @@
 
                     <ImageView
                         android:id="@+id/iv_image"
-                        android:layout_width="35dp"
+                        android:layout_width="30dp"
                         android:layout_height="35dp"
 
                         android:layout_centerVertical="true"
@@ -91,13 +94,14 @@
 
                     android:layout_weight="2">
 
-                    <ImageButton
+                    <Button
                         android:id="@+id/print_button"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
 
                         android:layout_centerVertical="true"
-                        android:background="@drawable/print_icon" />
+                        android:background="@drawable/print_icon"
+                        card_view:backgroundTint="@color/pink" />
 
                     <ImageView
                         android:id="@+id/paymentIcon"
