--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="offWhite">#F2F3F7</color>
-    <color name="surma">#222D32</color>
+    <color name="surma">#272331</color>
     <color name="pink">#E91E63</color>
     <color name="orange">#EF473A</color>
     <color name="teal_700">#B8C7CE</color>
