--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -9,6 +9,18 @@
     android:paddingBottom="50dp"
     tools:context=".ui.orders.OrdersFragment">
 
+   <TextView
+       android:id="@+id/noData"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_centerInParent="true"
+       android:ems="10"
+       android:gravity="center"
+       android:inputType="textPersonName"
+       android:text="No order"
+       android:textSize="24sp"
+       android:textStyle="bold" />
+
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
@@ -27,6 +39,7 @@
           tools:layout_editor_absoluteY="0dp">
 
       </androidx.recyclerview.widget.RecyclerView>
+
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
